--- a/SWAT/Content/Site.css
+++ b/SWAT/Content/Site.css
@@ -1,12 +1,17 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 72px;
     padding-bottom: 20px;
+    
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-image:url(images/background.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position:center;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
