--- a/SWAT/Views/SFLat/Create.cshtml
+++ b/SWAT/Views/SFLat/Create.cshtml
@@ -197,7 +197,7 @@
             <div class="col-md-offset-2 col-md-10">
                 <p>
                     <br />
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Next" class="btn btn-default" />
                 </p>
             </div>
         </div>
