--- a/SWAT/Views/SFPoint/Edit.cshtml
+++ b/SWAT/Views/SFPoint/Edit.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit - @Html.HiddenFor(model => model.SurveyID, new { SurveyID=ViewBag.SurveyID})</h2>
+<h2>Edit - Sanitation Facilities</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>tblSWATSFpoint</legend>
+        <legend>Sanitation Points Assessment</legend>
 
         @Html.HiddenFor(model => model.ID)
         @Html.HiddenFor(model => model.SurveyID, new { SurveyID=ViewBag.SurveyID})
