--- a/SWAT/Views/Shared/_Layout.cshtml
+++ b/SWAT/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - SWAT</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-2.1.0.min.js"></script>
     @RenderSection("Scripts",false/*required*/)
@@ -19,10 +19,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("SWAT", "Details", "User", null, new { id = 191, @class = "navbar-brand" })
+                <a href="http://projects.csg.uwaterloo.ca/hydrosanitas"><img src="~/Content/images/hydro.png" height="72px"/></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("SWAT", "Details", "User", null, new { id = 191 })</li>
                 </ul>
             </div>
         </div>
